sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:13: error: value and is not a member of Boolean
    while ((gap>0)and(i-k*gap)>0){
                  ^