sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var i=0
  val l=getValueCount()
  var v=0
  var k=0
  var m=1
  var gap=l/2
  for(i<- 1 to l-1){
    k=1
    m=i
    v=getValue(i)
    while ((gap>0)and(i-k*gap)>0){
   		if (isSmaller((i-(k+1)*gap),(i-k*gap))==false){
       	copy(i-k*gap,i-(k-1)*gap)
       	m=i-k*gap
      }
    k=k+1
    setValue(m,v)
  	gap=gap/2
  	}
	}
}